<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:src="@drawable/pc3"
            android:id="@+id/versity_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@string/light"
            android:justificationMode="inter_word"
            android:text="@string/about_university"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DO YOU KNOW?"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:fontFamily="@string/light"
            android:justificationMode="inter_word"
            android:text="@string/do_you_know"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="GUB Ranking"
            android:textSize="@dimen/text_size"
            android:textColor="@color/textColor"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@string/bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:fontFamily="@string/light"
            android:layout_marginTop="@dimen/text_margin"
            android:justificationMode="inter_word"
            android:text="@string/ranking"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>